--- a/SystemUserRights.css
+++ b/SystemUserRights.css
@@ -89,6 +89,11 @@ table.roleTable tr.even .dtfc-fixed-left {
     background-color: #efefef !important;
 }
 
+table.roleTable thead tr,
+table.roleTable thead th.dtfc-fixed-left {
+    background-color: #ececec;
+}
+
 table.roleTable tr.odd td.highlight,
 table.roleTable tr.odd>td.dtfc-fixed-left.highlight,
 table.roleTable tr.even td.highlight,
@@ -146,6 +151,8 @@ div#pagecontainer {
 }
 
 div#roleTableWrapper {
+    border-top: 1px solid rgba(0, 0, 0, 0.30);
+    border-right: 1px solid rgba(0, 0, 0, 0.30);
     border: 1px solid rgba(0, 0, 0, 0.30);
 }
 
@@ -153,7 +160,14 @@ table.roleTable thead th {
     border-right: solid 1px rgba(0, 0, 0, 0.15);
 }
 
+div#roleTableWrapper div.dataTables_wrapper.no-footer .dataTables_scrollBody {
+    border-bottom: none !important;
+}
 
-table.roleTable thead .dtfc-fixed-left {
-    border-left: 1px solid rgba(0, 0, 0, 0.15);
+table.roleTable tbody td.dtfc-fixed-left {
+    border-left: none !important;
+}
+
+table.roleTable tbody td:last-child:not(.dtfc-fixed-left) {
+    border-right: none;
 }
