--- a/SystemUserRights.css
+++ b/SystemUserRights.css
@@ -259,3 +259,8 @@ div.dt-buttons {
 .colored-toast .swal2-html-container {
     color: white;
 }
+
+a.dropdown-item {
+    font-size: inherit !important;
+    cursor: pointer !important;
+}
