--- a/SystemUserRights.css
+++ b/SystemUserRights.css
@@ -297,3 +297,25 @@ table#SUR-System-Table {
 table#SUR-System-Table thead {
     background-color: #ececec;
 }
+
+table#SUR-System-Table tbody tr:hover {
+    background-color: #d9ebf5 !important;
+}
+
+.dropdown-item {
+    padding: .25rem 1.5rem .25rem 0.5rem;
+}
+
+td.role-id-column {
+    font-size: small;
+    color: #222
+}
+
+table#SUR-System-Table.compact td,
+table#SUR-System-Table.compact th {
+    padding-left: 8px;
+}
+
+.select2-container {
+    width: 100% !important;
+}
