--- a/SystemUserRights.css
+++ b/SystemUserRights.css
@@ -318,4 +318,5 @@ table#SUR-System-Table.compact th {
 
 .select2-container {
     width: 100% !important;
+    font-family: "Atkinson Hyperlegible" !important;
 }
