--- a/SecurityAccessGroups.css
+++ b/SecurityAccessGroups.css
@@ -555,3 +555,24 @@ a.deleteAlertButton {
 a.deleteAlertButton:hover {
     opacity: 1;
 }
+
+input.timePicker {
+    background-color: white !important;
+}
+
+table#alertLogTable ::placeholder {
+    opacity: 1 !important;
+}
+
+table#alertLogTable .select2-container--default.select2-container--focus .select2-selection--multiple {
+    color: #495057;
+    background-color: #fff;
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+table#alertLogTable .select2-container--default .select2-selection--multiple {
+    border: 1px solid #ced4da;
+    font-size: 14px;
+}
