--- a/SecurityAccessGroups.css
+++ b/SecurityAccessGroups.css
@@ -70,6 +70,10 @@ table#SAG-System-Table tr.odd td.SAG {
     background-color: white !important;
 }
 
+table#SAG-System-Table tr.even td.SAG {
+    background-color: #f5f5f5 !important;
+}
+
 div#SAG-System-Table_filter label {
     margin-bottom: 0;
 }
