--- a/SecurityAccessGroups.css
+++ b/SecurityAccessGroups.css
@@ -162,7 +162,7 @@ form#SAG_Setting div.SAG-form-row {
 }
 
 .form-check input {
-    border-color: #aaa;
+    border-color: #999;
 }
 
 form#SAG_Setting hr {
