--- a/SecurityAccessGroups.css
+++ b/SecurityAccessGroups.css
@@ -171,7 +171,7 @@ form#SAG_Setting div.SAG-form-row {
 
 form#SAG_Setting hr {
     margin: 0.5rem 0;
-    border-color: #666;
+    border-color: #00000060;
 }
 
 form#SAG_Setting .section-header {
